Updated to support arduino Due

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ default_envs = uno
 platform = atmelsam
 board = due
 framework = arduino
-lib_deps = coryjfowler/mcp_can@^1.5.0
+lib_deps = alessandrobrugnera9/DtoStrf Library@^1.0
 
 [env:uno]
 platform = atmelavr
